--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 header {
     text-align: center;
-    background-color: grey;
+    background-color: rgb(99, 99, 99);
+    margin: -20px;
+    color: white;
 }
 h1 {
     font-size: 30px;
@@ -10,9 +12,11 @@ main {
     text-align: center;
     padding: 30px;
     margin: 0 auto;
+    background-color: black;
+    margin-inline: -10px;
 }
-.texto{
-    text-align: center;
+.textos{
+    color: white;
     font-size: 20px;
 }
 .mostraHTML{
@@ -21,6 +25,7 @@ main {
 }
 footer{
     text-align: center;
-    background-color: grey;
-
+    background-color: rgb(99, 99, 99);
+    margin: -20px;
+    color: white;
 }
